gccida/c0/eliminate_regs_in_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3427:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
old_body = ( rtx)insna[2]; 
                 ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3432:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = ( rtx)insna[2]; 
            ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3455:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
base = ( rtx)old_set[1]; 
             ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3473:9: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
? ( rtx)prev_insn[2] 
        ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3484:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
base = ( rtx)prev_set[1]; 
             ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3502:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( rtx)insna[2]; 
            ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3562:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( rtx)insna[2]; 
            ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3584:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
vec->elem[0] = ( rtx)insna[2]; 
                     ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3590:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 3071, "eliminate_regs_in_insn"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3600:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3602:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
orig_operand[i] = recog_data_0.operand[i]; 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3603:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
substed_operand[i] = recog_data_0.operand[i]; 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3604:21: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( insn_is_asm || insn_data_0[icode].operand[i].eliminable ) 
                    ^~~~~~~~~~~
                    insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3606:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] && ( unsigned __int16)*( _DWORD *)orig_operand[i] == 61 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3618:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v4 = eliminate_regs( recog_data_0.operand[i], VOIDmode, v9); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3625:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.operand_loc[i] = 0LL; 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3626:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[i] 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3636:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_dups; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/reload1.c:3637:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.dup_loc[i] = *recog_data_0.operand_loc[recog_data_0.dup_num[i]]; 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eliminate_regs_in_insn/src/obj/reload1.o] Error 1
